# binnacle

./: .eslintrc.json  .gitignore  .validation-bn-6ed5  0001-feat-add-short_name-support-to-bug-idea-milestone-an.patch  AGENTS.md  CHANGELOG.md  CIRCULAR_GRAVITY_ANALYSIS.md  CONTRIBUTING.md  COPILOT_VERSION  Cargo.toml  IDEAS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRD.md  PROMPT.md  README.md  agent.sh  build.rs  containeragent.sh  justfile  launch-agent.sh  package-lock.json  package.json  test-clickable-agent-id.html  test-filters.mjs
.binnacle/containers/: config.kdl
.binnacle/containers/worker/: Containerfile  entrypoint.sh  git-wrapper.sh
.binnacle/tmux/: default.kdl
.cargo/: config.toml
.github/agents/: binnacle-ask.agent.md  binnacle-buddy.agent.md  binnacle-do.agent.md  binnacle-plan.agent.md  binnacle-prd.agent.md  binnacle-tasks.agent.md
.github/instructions/: binnacle.instructions.md
.github/workflows/: cd.yml  ci.yml  deploy-viewer.yml  release.yml
archive/: gui_index.html
container/: Containerfile  Containerfile.default  Dockerfile  README.md  bn-entry.sh  docker-compose.yml  entrypoint.sh  launch-worker.sh
docs/: PERFORMANCE_RESULTS.md  api-batch-links.md  azl3-rootless-bootstrap.md  embedding-viewer.md  getting-started.md  hello-world.md  tmux-layouts.md
hooks/: commit-msg  post-commit  pre-commit  pre-push
infra/: README.md  bootstrap.sh  deploy.sh  main.bicep  main.bicepparam
npm/: .gitignore  README.md  index.d.ts  index.js  package.json
prds/: CIRCULAR_GRAVITY_DESIGN.md  IDEA_DISTRIBUTED_SUBGRAPH_COORDINATION.md  IDEA_KDL_PLUGIN_SPECIFICATION.md  PRD_ACTIVE_TASK_TIMER.md  PRD_ACTIVITY_LOG_ENHANCEMENTS.md  PRD_AGENT_DEPLOYMENT.md  PRD_AGENT_GRAPH_VISUALIZATION.md  PRD_AGENT_LIFECYCLE.md  PRD_AGENT_NODE_LABELS.md  PRD_AUTO_FOLLOW_CONFIG.md  PRD_CLICKABLE_ENTITY_IDS.md  PRD_COMMIT_REQUIRED_CLOSURE.md  PRD_CONTAINERD_RUNTIME.md  PRD_CONTAINER_USER_IDENTITY.md  PRD_CONTAINER_WORKER.md  PRD_COPILOT_AGENTS.md  PRD_CO_AUTHOR_ATTRIBUTION.md  PRD_DOCS_ALIGNMENT.md  PRD_DOC_NODES.md  PRD_ENTITY_COMPOSITION.md  PRD_FOLDER_IMPORT.md  PRD_GENERIC_EDGES.md  PRD_GIT_ROOT_DETECTION.md  PRD_GUI_CAMERA_FOLLOW.md  PRD_GUI_GRAPH_SEARCH_FILTER.md  PRD_GUI_KILL_SUBCOMMAND.md  PRD_GUI_PROCESS_MANAGEMENT.md  PRD_IDEA_NODES.md  PRD_MCP_SIMPLIFICATION.md  PRD_MULTI_SELECT.md  PRD_ORIENT_INIT_FLAG.md  PRD_PRD_NODES.md  PRD_QUESTION_ANSWER_NODES.md  PRD_QUEUE_NODES.md  PRD_SEARCH_CAMERA_FOLLOW.md  PRD_SYSTEM_COMMANDS.md  PRD_TEST_ISOLATION.md  PRD_UNIFIED_AGENTS_V2.md  issue-2-task-tools.md
scripts/: bn-agent  bundle-web.sh  embed_wasm.sh  gui-check.sh  test-info-panel.sh  validate-web.sh
src/: action_log.rs  github.rs  lib.rs  main.rs  sys.rs
src/agents/: definitions.rs  embedded.rs  kdl.rs  mod.rs  resolver.rs
src/agents/embedded/: ask.md  buddy.md  do.md  free.md  prd.md  worker.md
src/cli/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs  resolver.rs  schema.rs
src/container/: errors.rs  mod.rs  validation.rs
src/gui/: embedded.rs  index.html  mod.rs  pid_file.rs  protocol.rs  server.rs  session_log.rs  tunnel.rs  upstream.rs  watcher.rs  websocket.rs
src/gui/shared/: layout.rs  mod.rs  render.rs  theme.rs
src/mcp/: mod.rs
src/models/: agents.rs  complexity.rs  graph.rs  mod.rs  prompts.rs
src/storage/: backend.rs  git_notes.rs  mod.rs  orphan_branch.rs
src/tmux/: command.rs  layout.rs  mod.rs  parser.rs  save.rs  schema.rs
src/tui/: app.rs  connection.rs  mod.rs  notifications.rs
src/wasm/: archive.rs  bindings.rs  mod.rs  viewer.html
tests/: api_summarize_test.rs  bn-agent-comprehensive-test.sh  bn-agent-deps-test.sh  bn-agent-drain-test.sh  cli_action_log_test.rs  cli_agent_heartbeat_test.rs  cli_agent_kill_test.rs  cli_agent_reconcile_test.rs  cli_agent_rm_test.rs  cli_agent_scale_test.rs  cli_anonymous_commit_test.rs  cli_commit_msg_hook_test.rs  cli_commit_test.rs  cli_config_agents_test.rs  cli_config_state_test.rs  cli_container_test.rs  cli_doc_test.rs  cli_goodbye_test.rs  cli_graph_test.rs  cli_gui_performance_test.rs  cli_hello_binnacle_test.rs  cli_idea_test.rs  cli_issue_test.rs  cli_maintenance_test.rs  cli_mcp_test.rs  cli_migrate_config_test.rs  cli_migrate_test.rs  cli_milestone_autoclose_test.rs  cli_orient_test.rs  cli_post_commit_hook_test.rs  cli_production_scale_test.rs  cli_queue_test.rs  cli_search_test.rs  cli_system_test.rs  cli_task_test.rs  cli_test_test.rs  cli_tmux_integration_test.rs  container-prompt-injection-test.sh  gui_tests.rs  orphan_branch_test.rs  (+3 more)
tests/common/: mod.rs
web/: .gitignore  index.html  test-active-task-pane.html  test-active-task-with-edges.js  test-activity-log-css.html  test-agent-cards.html  test-agent-list.html  test-available-work-pane.html  test-batch-export.html  test-batch-info-panel.html  test-click-modifiers.html  test-clickable-ids.html  test-component.js  test-doc-integration.html  test-doc-viewer.html  test-edge-info-panel.html  test-edge-physics.mjs  test-entity-id-click.html  test-entity-id-linkify.html  test-entity-link-hover.html  test-entity-tooltip.html  test-filter-bar.html  test-filters.html  test-graph-controls.html  test-graph-overlay-panel.html  test-info-panel.html  test-keyboard-selection.html  test-link-builder.html  test-markdown-pane.html  test-markdown.html  test-multi-link-builder.html  test-multiselect-polish.html  test-multiselect.html  test-node-detail-modal.html  test-node-dragging.html  test-panel-all-nodes.html  test-panel-expand.html  test-pause-detection.html  test-recently-completed-pane.html  test-sidebar-search.html  (+3 more)
web/css/: main.css
web/docs/: info-panel-test-report.md  pan-to-node-animation.md  unified-connection.md
web/js/: keyboard-selection.test.js  state-multiselect.test.js  state.js
(+108 files in other folders)
