[package]
name = "binnacle"
version = "0.0.1-alpha.1"
edition = "2024"
description = "A CLI tool for AI agents and humans to track project graphs"
license = "MIT"
repository = "https://github.com/hbeberman/binnacle"
keywords = ["agent", "ai", "graph"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "bn"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hash-based ID generation
sha2 = "0.10"

# XDG directories
dirs = "5"

# Error handling
thiserror = "1"

# Archive/compression
tar = "0.4"
flate2 = "1.0"

# GUI dependencies (feature-gated)
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
futures = { version = "0.3", optional = true }
notify = { version = "6", optional = true }
tracing = { version = "0.1", optional = true }

[features]
gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
