[package]
name = "binnacle"
version = "0.0.1-alpha.4"
edition = "2024"
description = "A CLI tool for AI agents and humans to track project graphs"
license = "MIT"
repository = "https://github.com/hbeberman/binnacle"
readme = "README.md"
keywords = ["agent", "ai", "graph"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "bn"
path = "src/main.rs"

[lib]
name = "binnacle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hash-based ID generation
sha2 = "0.10"

# XDG directories
dirs = "5"

# Error handling
thiserror = "1"

# Archive/compression
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
base64 = "0.22"

# GUI dependencies (feature-gated)
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
futures = { version = "0.3", optional = true }
notify = { version = "6", optional = true }
tracing = { version = "0.1", optional = true }

[features]
gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
